--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,11 +39,24 @@ jobs:
     #   #   pytest
     #     run: | 
     #       python run.py
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
+    - name: Login to Dockerhub
+      uses: docker/login-action@v2
       with:
-        image: amalaseeli/demo-python-app
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+      
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with: 
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/backend-api
+
+    # - name: Build and Push Docker Image
+    #   uses: mr-smithers-excellent/docker-build-push@v4
+    #   with:
+    #     image: amalaseeli/demo-python-app
+    #     registry: docker.io
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
       
